--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -7,5 +7,6 @@
 </title>
 	<body>
     <h1>I Can Do That</h1>
-    <p>Let me take that off your plate.</p>
+    <h3>Let me take that off your plate.</h3>
+    <p>I'll reorganize your Google Drive, reconcile the QuickBooks accounts, draft a killer marketing plan, and design a new logo before lunch. I'm preternaturally skilled at events management and darn good at herding cats.</p>
 </body>
